--- a/DL_labSession1_part_1.ipynb
+++ b/DL_labSession1_part_1.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1uUsrfzZO7DFFiaoJyh-O0W_oCJcrwYbE",
-      "authorship_tag": "ABX9TyO1k9/+EyFumAXOz/5MD141",
+      "authorship_tag": "ABX9TyMpgAd0Lpi/rFRGMCb+ZF88",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -288,7 +288,7 @@
         "\r\n",
         "    return vector"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -322,7 +322,7 @@
       "source": [
         "y_prime = lambda x: 2*x"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -465,7 +465,7 @@
         "  \\hat{y} = \\begin{bmatrix}1 & x\\end{bmatrix} . \\begin{bmatrix}b\\\\w\\end{bmatrix}\r\n",
         "\\end{equation}\r\n",
         " \\\\\r\n",
-        "Now this reduces to a linear system, that can be rewritten as  $\\hat{y}=X\\theta$, where $\\theta$ is the parameters vector of our model and X is the set of independent variables. We cqn now rewrite the error as:\r\n",
+        "Now this reduces to a linear system, that can be rewritten as  $\\hat{y}=X\\theta$, where $\\theta$ is the parameters vector of our model and X is the set of independent variables. We can now rewrite the error as:\r\n",
         "\r\n",
         "\r\n",
         "\\begin{equation}\r\n",
@@ -964,7 +964,7 @@
         "      coef[1:] = coef[1:] - l_rate * error_weights\r\n",
         "      return coef"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -977,7 +977,7 @@
         "def mse_metric(actual, predicted):\r\n",
         "  return np.mean((actual-predicted)**2)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -1068,7 +1068,7 @@
         "print('Wine Quality:')\r\n",
         "print(test_data[idxs,-1]*(minmax[-1][1]-minmax[-1][0]) + minmax[-1][0])\r\n",
         "print('Predicted Wine Quality:')\r\n",
-        "print(test_predictions[np.random.randint(0,np.size(test_data,1),5)]*(minmax[-1][1]-minmax[-1][0]) + minmax[-1][0])"
+        "print(test_predictions[idxs]*(minmax[-1][1]-minmax[-1][0]) + minmax[-1][0])"
       ],
       "execution_count": null,
       "outputs": []
@@ -1079,7 +1079,7 @@
         "id": "wjgBgzJKZiHn"
       },
       "source": [
-        "We obtained a fit for the data with a Mean squared error of 0.014, try changing the batch size and learning rate to see what effect it gives to the optimization process. Maybe the advantage of MSE cannot be seen in this problem but as dimensionality increases it becomes a really useful tool for training Deep learning models."
+        "We obtained a fit for the data with a Mean squared error of 0.014, try changing the batch size and learning rate to see what effect it gives to the optimization process. Maybe the advantage of SGD cannot be seen in this problem but as dimensionality increases it becomes a really useful tool for training Deep learning models."
       ]
     }
   ]
