--- a/DL_labSession1_part_1.ipynb
+++ b/DL_labSession1_part_1.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1uUsrfzZO7DFFiaoJyh-O0W_oCJcrwYbE",
-      "authorship_tag": "ABX9TyMpgAd0Lpi/rFRGMCb+ZF88",
+      "authorship_tag": "ABX9TyPY222H8i4SeHnbUTKpJRIt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -288,7 +288,7 @@
         "\r\n",
         "    return vector"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -322,7 +322,7 @@
       "source": [
         "y_prime = lambda x: 2*x"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -514,10 +514,10 @@
       },
       "source": [
         "n_samples = 20\r\n",
-        "Points = np.sort(np.random.uniform(0,10,(n_samples)))\r\n",
+        "X = np.sort(np.random.uniform(0,10,(n_samples)))\r\n",
         "y = lambda x: x**2 + np.random.uniform(-10,10,(len(x)))\r\n",
-        "observations = y(Points)\r\n",
-        "plt.scatter(Points,observations)"
+        "Y = y(X)\r\n",
+        "plt.scatter(X,Y)"
       ],
       "execution_count": null,
       "outputs": []
@@ -537,11 +537,11 @@
         "id": "tJawFKr-NnYM"
       },
       "source": [
-        "def lssr(observations, points):\r\n",
-        "  points = np.vstack((np.ones(np.size(points,axis=-1)),points)).transpose()\r\n",
-        "  B = np.matmul(points.transpose(),points)\r\n",
-        "  B = np.matmul(np.linalg.inv(B),points.transpose())\r\n",
-        "  return np.matmul(B,observations)"
+        "def lssr(Y, X):\r\n",
+        "  X = np.vstack((np.ones(np.size(X,axis=-1)),X)).transpose()\r\n",
+        "  B = np.matmul(X.transpose(),X)\r\n",
+        "  B = np.matmul(np.linalg.inv(B),X.transpose())\r\n",
+        "  return np.matmul(B,Y)"
       ],
       "execution_count": null,
       "outputs": []
@@ -561,7 +561,7 @@
         "id": "i4ThS2zOR1cH"
       },
       "source": [
-        "coef = lssr(observations,Points)"
+        "Theta = lssr(Y,X)"
       ],
       "execution_count": null,
       "outputs": []
@@ -581,9 +581,9 @@
         "id": "RqMPf2EwULd4"
       },
       "source": [
-        "plt.scatter(Points,observations)\r\n",
-        "fit = coef[0] + coef[1]*Points\r\n",
-        "plt.plot(Points,fit,'r')"
+        "plt.scatter(X,Y)\r\n",
+        "fit = Theta[0] + Theta[1]*X\r\n",
+        "plt.plot(X,fit,'r')"
       ],
       "execution_count": null,
       "outputs": []
@@ -603,9 +603,9 @@
         "id": "gq0PqeH0Ul4N"
       },
       "source": [
-        "Points2 = Points**2\r\n",
-        "X = np.vstack((Points,Points2))\r\n",
-        "coef2 = lssr(observations,X)"
+        "x2 = X**2\r\n",
+        "X = np.vstack((X,x2))\r\n",
+        "Theta_cuadratic = lssr(Y,X)"
       ],
       "execution_count": null,
       "outputs": []
@@ -625,9 +625,9 @@
         "id": "bQd8bV9ZVnMl"
       },
       "source": [
-        "plt.scatter(Points,observations)\r\n",
-        "fit = coef2[0] + coef2[1]*Points + coef2[2]*Points**2\r\n",
-        "plt.plot(Points,fit,'r')"
+        "plt.scatter(X[0],Y)\r\n",
+        "fit = Theta_cuadratic[0] + Theta_cuadratic[1]*X[0] + Theta_cuadratic[2]*X[1]\r\n",
+        "plt.plot(X[0],fit,'r')"
       ],
       "execution_count": null,
       "outputs": []
@@ -652,12 +652,12 @@
         "id": "4FDF7dFfX05Z"
       },
       "source": [
-        "def sgd_update(points, observations, coef, l_rate):\r\n",
-        "      points = np.vstack((np.ones(np.size(points,axis=-1)),points)).transpose()\r\n",
-        "      yhat = np.matmul(points,coef)\r\n",
-        "      error = np.mean(np.einsum('i,ij->ij',2*(yhat-observations),points), axis = 0)\r\n",
-        "      coef = coef - l_rate * error\r\n",
-        "      return coef"
+        "def sgd_update(X, Y, Theta, l_rate):\r\n",
+        "      X = np.vstack((np.ones(np.size(X,axis=-1)),X)).transpose()\r\n",
+        "      Yhat = np.matmul(X,Theta)\r\n",
+        "      grad_error = np.mean(np.einsum('i,ij->ij',2*(Yhat-Y),X), axis = 0)\r\n",
+        "      Theta  = Theta - l_rate * grad_error\r\n",
+        "      return Theta"
       ],
       "execution_count": null,
       "outputs": []
@@ -677,13 +677,13 @@
         "id": "QtGjCwq2amnU"
       },
       "source": [
-        "coef_sgd = np.zeros(2)\r\n",
+        "Theta_sgd = np.zeros(2)\r\n",
         "n_epochs = 2000\r\n",
         "lr = 0.01\r\n",
         "for i in range(n_epochs):\r\n",
-        "  y = sgd_update(Points,observations,coef_sgd,lr)\r\n",
-        "  diff = np.abs(np.sum(y-coef_sgd))\r\n",
-        "  coef_sgd = y\r\n",
+        "  y = sgd_update(X[0],Y,Theta_sgd,lr)\r\n",
+        "  diff = np.abs(np.sum(y-Theta_sgd))\r\n",
+        "  Theta_sgd = y\r\n",
         "  if diff < 1e-6:\r\n",
         "    break"
       ],
@@ -705,10 +705,10 @@
         "id": "OZZ40moLcOUl"
       },
       "source": [
-        "plt.scatter(Points,observations)\r\n",
-        "fit = coef_sgd[0] + coef_sgd[1]*Points\r\n",
-        "plt.plot(Points,fit,'r')\r\n",
-        "error_linear = np.mean((observations - fit)**2)"
+        "plt.scatter(X[0],Y)\r\n",
+        "fit = Theta_sgd[0] + Theta_sgd[1]*X[0]\r\n",
+        "plt.plot(X[0],fit,'r')\r\n",
+        "error_linear = np.mean((Y - fit)**2)"
       ],
       "execution_count": null,
       "outputs": []
@@ -740,9 +740,9 @@
       },
       "source": [
         "print('result with SGD:')\r\n",
-        "print(coef_sgd)\r\n",
+        "print(Theta_sgd)\r\n",
         "print('result in analytical way:')\r\n",
-        "print(coef)"
+        "print(Theta)"
       ],
       "execution_count": null,
       "outputs": []
@@ -763,10 +763,10 @@
       },
       "source": [
         "n_samples = 50\r\n",
-        "Points = np.sort(np.random.uniform(-10,10,(n_samples)))\r\n",
+        "X = np.sort(np.random.uniform(-10,10,(n_samples)))\r\n",
         "y = lambda x: x + np.random.normal(0,1,n_samples)\r\n",
-        "observations = y(Points)\r\n",
-        "plt.scatter(Points,observations)"
+        "Y = y(X)\r\n",
+        "plt.scatter(X,Y)"
       ],
       "execution_count": null,
       "outputs": []
@@ -781,16 +781,16 @@
         "n_epochs = 2000\r\n",
         "lr = 0.01\r\n",
         "for i in range(n_epochs):\r\n",
-        "  y = sgd_update(Points,observations,coef_sgd,lr)\r\n",
+        "  y = sgd_update(X,Y,coef_sgd,lr)\r\n",
         "  diff = np.abs(np.sum(y-coef_sgd))\r\n",
         "  coef_sgd = y\r\n",
         "  if diff < 1e-6:\r\n",
         "    break\r\n",
         "\r\n",
-        "plt.scatter(Points,observations)\r\n",
-        "fit = lambda x: coef_sgd[0] + coef_sgd[1]*x\r\n",
-        "plt.plot(Points,fit(Points),'r')\r\n",
-        "error_linear = np.mean((observations - fit(Points))**2)"
+        "plt.scatter(X,Y)\r\n",
+        "fit = coef_sgd[0] + coef_sgd[1]*X\r\n",
+        "plt.plot(X,fit,'r')\r\n",
+        "error_linear = np.mean((Y - fit)**2)"
       ],
       "execution_count": null,
       "outputs": []
@@ -822,7 +822,7 @@
       },
       "source": [
         "coef_sgd = np.zeros(4)\r\n",
-        "#Based on what you have learned so far, fit the points using a third order polynomial: y = b + w1*x + w2*x**2 + x3*x**3 "
+        "#Based on what you have learned so far, fit the points using a third order polynomial: y = b + w1*x + w2*x**2 + w3*x**3 "
       ],
       "execution_count": null,
       "outputs": []
@@ -913,10 +913,24 @@
         "the function we are trying to fit with this method it is:\r\n",
         "\r\n",
         "\\begin{equation}\r\n",
-        "  Y = b_0 + W^T X\r\n",
+        "  \\hat{Y} = b_0 + W^T X = X\\theta\r\n",
         "\\end{equation}\r\n",
         "\r\n",
-        "Where b_0 is a bias, W is the weight vector and X is the vector of independent variables."
+        "Where b_0 is a bias, W is the weight vector and X is the vector of independent variables.\r\n",
+        "\r\n",
+        "\\\\\r\n",
+        "\r\n",
+        "In this case we will use mini-batches in stochastic gradient descent for calculating the gradients and updating, the motivation for this is that by doing it this way we are dealing with matrixes of reduced size. The forumula for mini-batch of SGD changes to:\r\n",
+        "\r\n",
+        "\\begin{equation}\r\n",
+        "  \\theta_k = \\theta_{k-1} - lr * \\frac{1}{b}\\sum_1^b 2(\\hat{Y}-Y)X \\\\\r\n",
+        "  b < size \\ of \\ the \\ dataset\r\n",
+        "\\end{equation}\r\n",
+        "\r\n",
+        "With this two terms arise:\r\n",
+        "\r\n",
+        "* Iteration: Is a SGD update step with a batch.\r\n",
+        "* Epoch: an epoch completes when we iterate throug the whole training dataset. For better performance, the batches elements are picked randomly from the dataset, this helps with convergence.\r\n"
       ]
     },
     {
@@ -956,15 +970,16 @@
         "    return yhat\r\n",
         "\r\n",
         "# Estimate linear regression coefficients using stochastic gradient descent\r\n",
-        "def sgd_update(batch, coef, l_rate):\r\n",
-        "      yhat = predict(batch, coef)\r\n",
-        "      error_bias = np.mean(2*(yhat - batch[:,-1]))\r\n",
-        "      error_weights = np.mean(np.einsum('i,ij -> ij',2* (yhat - batch[:,-1]) ,batch[:,:-1]), axis=0)\r\n",
-        "      coef[0] = coef[0] - l_rate * error_bias\r\n",
-        "      coef[1:] = coef[1:] - l_rate * error_weights\r\n",
-        "      return coef"
+        "def sgd_update(batch, Theta, l_rate):\r\n",
+        "      X = batch[:,:-1].transpose()\r\n",
+        "      Y = batch[:,-1]\r\n",
+        "      X = np.vstack((np.ones(np.size(X,axis=-1)),X)).transpose()\r\n",
+        "      Yhat = np.matmul(X,Theta)\r\n",
+        "      grad_error = np.mean(np.einsum('i,ij->ij',2*(Yhat-Y),X), axis = 0)\r\n",
+        "      Theta  = Theta - l_rate * grad_error\r\n",
+        "      return Theta"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -977,7 +992,7 @@
         "def mse_metric(actual, predicted):\r\n",
         "  return np.mean((actual-predicted)**2)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
