--- a/session2/DL_labSession2.ipynb
+++ b/session2/DL_labSession2.ipynb
@@ -6,7 +6,7 @@
       "name": "DL_labSession2.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMe4AZOczKXaRcEoF66emnU",
+      "authorship_tag": "ABX9TyOXQ2ahZ3PdYqL6A70Jsdcx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ferngonzalezp/deep_learning_lab/blob/main/DL_labSession2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ferngonzalezp/deep_learning_lab/blob/main/session2/DL_labSession2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -121,7 +121,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -599,7 +599,7 @@
         "]\n",
         ")"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -610,7 +610,7 @@
       "source": [
         "train_dataset = datasets.MNIST(root='./',download=True, train=True, transform=transforms)"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -628,7 +628,7 @@
         "plt.imshow(example[0][0], cmap='gray')\n",
         "plt.title(example[1])"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -721,7 +721,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -751,7 +751,7 @@
         "    x = torch.flatten(x,1)\n",
         "    return self.model(x)"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -762,7 +762,7 @@
       "source": [
         "#Build your CNN model\n"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -775,13 +775,13 @@
         "batch_size = 64\n",
         "n_epochs = 20\n",
         "learn_rate = 1e-1\n",
-        "depth = 4\n",
-        "dataset = 'MNIST'\n",
-        "opt = 'sgd_momentum'\n",
-        "momentum = 0.9\n",
+        "depth = 4            # This controls the number of layers of the MLP\n",
+        "dataset = 'MNIST'    # MNIST or FMNIST\n",
+        "opt = 'sgd_momentum' # sgd or sgd_momentum\n",
+        "momentum = 0.9 \n",
         "model_type = 'mlp' #choose betwen mlp or cnn"
       ],
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -793,7 +793,7 @@
         "#Use GPU if available\n",
         "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -812,7 +812,7 @@
         "  train_dataset = datasets.FashionMNIST(root='./',download=True, train=True, transform=transform())\n",
         "  test_dataset = datasets.FashionMNIST(root='./', train=False, transform=transform())"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -840,7 +840,7 @@
         "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
         "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=batch_size)"
       ],
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -869,7 +869,7 @@
         "if opt == 'sgd_momentum':\n",
         "  optimizer = torch.optim.SGD(model.parameters(),lr=learn_rate, momentum=momentum)"
       ],
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": []
     },
     {
