--- a/session3/DL_Lab_Session3.ipynb
+++ b/session3/DL_Lab_Session3.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPtMfX74vT+ZxO7xqrDfMTe",
+      "authorship_tag": "ABX9TyP3G0qhDDFQdsb7FWsAjsQ3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,7 +27,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ferngonzalezp/deep_learning_lab/blob/main/Session3/DL_Lab_Session3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ferngonzalezp/deep_learning_lab/blob/main/session3/DL_Lab_Session3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -119,6 +119,15 @@
       },
       "source": [
         "#Generaring Names with a Character RNN"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sILVXFQtAwvU"
+      },
+      "source": [
+        "<img src=\"https://i.imgur.com/jzVrf7f.png\">"
       ]
     },
     {
@@ -219,7 +228,7 @@
         "    def initHidden(self):\n",
         "        return torch.zeros(1, self.hidden_size)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -240,7 +249,7 @@
         "    line = randomChoice(category_lines[category])\n",
         "    return category, line"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -270,7 +279,7 @@
         "    letter_indexes.append(n_letters - 1) # EOS\n",
         "    return torch.LongTensor(letter_indexes)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -287,7 +296,7 @@
         "    target_line_tensor = targetTensor(line)\n",
         "    return category_tensor, input_line_tensor, target_line_tensor"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -320,7 +329,7 @@
         "\n",
         "    return output, loss.item() / input_line_tensor.size(0)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -339,7 +348,7 @@
         "    s -= m * 60\n",
         "    return '%dm %ds' % (m, s)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -480,7 +489,7 @@
         "from torch.utils.data.dataset import random_split\n",
         "from torch.nn.utils.rnn import pad_sequence"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -517,7 +526,7 @@
         "    text_list = pad_sequence(text_list, batch_first=True)\n",
         "    return label_list.to(device), text_list.to(device), text_lengths.to(device)"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -553,7 +562,7 @@
         "        hidden = (h0,c0)\n",
         "        return hidden"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -573,7 +582,7 @@
         "    acc = correct.sum() / len(correct)\n",
         "    return acc"
       ],
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -637,7 +646,7 @@
         "        val_loss.append(epoch_loss/(i+1))\n",
         "  return train_loss, val_loss, metric"
       ],
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -724,7 +733,7 @@
         "test_dataloader = DataLoader(test_dataset, batch_size=batch_size, collate_fn=collate_batch,\n",
         "                             shuffle=True)"
       ],
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -762,7 +771,7 @@
         "      print('positive review')\n",
         "    return prediction.item()"
       ],
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -865,7 +874,7 @@
         "from torch.utils.data.dataset import random_split\n",
         "from torch.nn.utils.rnn import pad_sequence"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -928,7 +937,7 @@
         "    text_list = pad_sequence(text_list, batch_first=True)\n",
         "    return label_list.to(device), text_list.to(device), text_lengths.to(device)"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -970,7 +979,7 @@
         "    acc = correct.float() / y.shape[0]\n",
         "    return acc"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1034,7 +1043,7 @@
         "        val_loss.append(epoch_loss/(i+1))\n",
         "  return train_loss, val_loss, metric"
       ],
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1121,7 +1130,7 @@
         "test_dataloader = DataLoader(test_dataset, batch_size=batch_size, collate_fn=collate_batch,\n",
         "                             shuffle=True)"
       ],
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1143,7 +1152,7 @@
       "source": [
         "label, text = test_dataset[np.random.randint(len(test_dataset))]"
       ],
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1166,7 +1175,7 @@
         "    prediction = model(tensor,model.init_hidden(1), length_tensor)\n",
         "    return prediction.argmax(1).item() + 1"
       ],
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": []
     },
     {
