--- a/session3/DL_Lab_Session3.ipynb
+++ b/session3/DL_Lab_Session3.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP3G0qhDDFQdsb7FWsAjsQ3",
+      "authorship_tag": "ABX9TyN/P0GAFLy3eOHigHFOFg87",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -119,6 +119,15 @@
       },
       "source": [
         "#Generaring Names with a Character RNN"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "brh3LhvFEtRz"
+      },
+      "source": [
+        "Tutorial from pytorch [docs](https://pytorch.org/tutorials/intermediate/char_rnn_generation_tutorial.html)."
       ]
     },
     {
