--- a/session3/DL_Lab_Session3.ipynb
+++ b/session3/DL_Lab_Session3.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN/P0GAFLy3eOHigHFOFg87",
+      "authorship_tag": "ABX9TyOsTNX72CuZZOx6YbfXxVCs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -841,7 +841,7 @@
         "id": "kXSbug4N_fIZ"
       },
       "source": [
-        "## 2. Create a Multi-Class Text Classificator"
+        "## 2. Create a Multi-Class Text Classifier"
       ]
     },
     {
