--- a/session3/DL_Lab_Session3.ipynb
+++ b/session3/DL_Lab_Session3.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOsTNX72CuZZOx6YbfXxVCs",
+      "authorship_tag": "ABX9TyOo98Lh0D+UYlhjwOBjHLjm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,19 +142,60 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rst0t-st4Upw"
+        "id": "rst0t-st4Upw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f4596ba9-506d-47b3-bd79-0df4a4a184b1"
       },
       "source": [
         "!gdown --id 1ccN7lWQTyrH27NsB__7zNqqSVVFzOCe4\n",
         "!unzip ./data.zip"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=1ccN7lWQTyrH27NsB__7zNqqSVVFzOCe4\n",
+            "To: /content/data.zip\n",
+            "\r0.00B [00:00, ?B/s]\r2.88MB [00:00, 45.1MB/s]\n",
+            "Archive:  ./data.zip\n",
+            "   creating: data/\n",
+            "  inflating: data/eng-fra.txt        \n",
+            "   creating: data/names/\n",
+            "  inflating: data/names/Arabic.txt   \n",
+            "  inflating: data/names/Chinese.txt  \n",
+            "  inflating: data/names/Czech.txt    \n",
+            "  inflating: data/names/Dutch.txt    \n",
+            "  inflating: data/names/English.txt  \n",
+            "  inflating: data/names/French.txt   \n",
+            "  inflating: data/names/German.txt   \n",
+            "  inflating: data/names/Greek.txt    \n",
+            "  inflating: data/names/Irish.txt    \n",
+            "  inflating: data/names/Italian.txt  \n",
+            "  inflating: data/names/Japanese.txt  \n",
+            "  inflating: data/names/Korean.txt   \n",
+            "  inflating: data/names/Polish.txt   \n",
+            "  inflating: data/names/Portuguese.txt  \n",
+            "  inflating: data/names/Russian.txt  \n",
+            "  inflating: data/names/Scottish.txt  \n",
+            "  inflating: data/names/Spanish.txt  \n",
+            "  inflating: data/names/Vietnamese.txt  \n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ywtj4bV_5LTc"
+        "id": "ywtj4bV_5LTc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "56610b0e-2e92-459e-8da1-ff31c7bf4c86"
       },
       "source": [
         "from __future__ import unicode_literals, print_function, division\n",
@@ -201,8 +242,17 @@
         "print('# categories:', n_categories, all_categories)\n",
         "print(unicodeToAscii(\"O'Néàl\"))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "# categories: 18 ['Portuguese', 'Russian', 'English', 'Japanese', 'Arabic', 'Greek', 'German', 'Scottish', 'Spanish', 'Chinese', 'French', 'Czech', 'Irish', 'Polish', 'Dutch', 'Vietnamese', 'Italian', 'Korean']\n",
+            "O'Neal\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -237,7 +287,7 @@
         "    def initHidden(self):\n",
         "        return torch.zeros(1, self.hidden_size)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -258,7 +308,7 @@
         "    line = randomChoice(category_lines[category])\n",
         "    return category, line"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -288,7 +338,7 @@
         "    letter_indexes.append(n_letters - 1) # EOS\n",
         "    return torch.LongTensor(letter_indexes)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -305,7 +355,7 @@
         "    target_line_tensor = targetTensor(line)\n",
         "    return category_tensor, input_line_tensor, target_line_tensor"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -319,15 +369,16 @@
         "learning_rate = 0.0005\n",
         "\n",
         "def train(category_tensor, input_line_tensor, target_line_tensor):\n",
-        "    target_line_tensor.unsqueeze_(-1)\n",
-        "    hidden = rnn.initHidden()\n",
-        "\n",
+        "    target_line_tensor.unsqueeze_(-1).to(device)\n",
+        "    hidden = rnn.initHidden().to(device)\n",
+        "    input_line_tensor =  input_line_tensor.to(device)\n",
+        "    target_line_tensor = target_line_tensor.to(device)\n",
         "    rnn.zero_grad()\n",
         "\n",
         "    loss = 0\n",
         "\n",
         "    for i in range(input_line_tensor.size(0)):\n",
-        "        output, hidden = rnn(category_tensor, input_line_tensor[i], hidden)\n",
+        "        output, hidden = rnn(category_tensor.to(device), input_line_tensor[i], hidden)\n",
         "        l = criterion(output, target_line_tensor[i])\n",
         "        loss += l\n",
         "\n",
@@ -338,7 +389,7 @@
         "\n",
         "    return output, loss.item() / input_line_tensor.size(0)"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -357,16 +408,31 @@
         "    s -= m * 60\n",
         "    return '%dm %ds' % (m, s)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gdX0tE2h6OeW"
+        "id": "sH5gJ2QAUTRF"
       },
       "source": [
-        "rnn = RNN(n_letters, 128, n_letters)\n",
+        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+      ],
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gdX0tE2h6OeW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fb90da6f-95a2-4874-f113-ab364295c80a"
+      },
+      "source": [
+        "rnn = RNN(n_letters, 128, n_letters).to(device)\n",
         "\n",
         "n_iters = 100000\n",
         "print_every = 5000\n",
@@ -388,7 +454,19 @@
         "        total_loss = 0"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0m 32s (5000 5%) 2.6897\n",
+            "1m 3s (10000 10%) 3.5650\n",
+            "1m 35s (15000 15%) 2.7950\n",
+            "2m 6s (20000 20%) 2.1556\n",
+            "2m 38s (25000 25%) 2.5244\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
