--- a/session3/DL_Lab_Session3.ipynb
+++ b/session3/DL_Lab_Session3.ipynb
@@ -7,8 +7,8 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "mount_file_id": "1BD2NrwBxESykW1TZ73WhbDmbaXdIJQ_L",
-      "authorship_tag": "ABX9TyPPmDlyfimnx7YpZtdAWAfl",
+      "mount_file_id": "https://github.com/ferngonzalezp/deep_learning_lab/blob/main/session3/DL_Lab_Session3.ipynb",
+      "authorship_tag": "ABX9TyMcDM0Ii9U+nMqPTcvKbBJ5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ferngonzalezp/deep_learning_lab/blob/main/DL_Lab_Session3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ferngonzalezp/deep_learning_lab/blob/main/session3/DL_Lab_Session3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -143,51 +143,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rst0t-st4Upw",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "44089fca-2ecd-43fc-f88a-d01c421737bc"
+        "id": "rst0t-st4Upw"
       },
       "source": [
         "!gdown --id 1ccN7lWQTyrH27NsB__7zNqqSVVFzOCe4\n",
         "!unzip ./data.zip"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading...\n",
-            "From: https://drive.google.com/uc?id=1ccN7lWQTyrH27NsB__7zNqqSVVFzOCe4\n",
-            "To: /content/data.zip\n",
-            "\r0.00B [00:00, ?B/s]\r2.88MB [00:00, 93.0MB/s]\n",
-            "Archive:  ./data.zip\n",
-            "   creating: data/\n",
-            "  inflating: data/eng-fra.txt        \n",
-            "   creating: data/names/\n",
-            "  inflating: data/names/Arabic.txt   \n",
-            "  inflating: data/names/Chinese.txt  \n",
-            "  inflating: data/names/Czech.txt    \n",
-            "  inflating: data/names/Dutch.txt    \n",
-            "  inflating: data/names/English.txt  \n",
-            "  inflating: data/names/French.txt   \n",
-            "  inflating: data/names/German.txt   \n",
-            "  inflating: data/names/Greek.txt    \n",
-            "  inflating: data/names/Irish.txt    \n",
-            "  inflating: data/names/Italian.txt  \n",
-            "  inflating: data/names/Japanese.txt  \n",
-            "  inflating: data/names/Korean.txt   \n",
-            "  inflating: data/names/Polish.txt   \n",
-            "  inflating: data/names/Portuguese.txt  \n",
-            "  inflating: data/names/Russian.txt  \n",
-            "  inflating: data/names/Scottish.txt  \n",
-            "  inflating: data/names/Spanish.txt  \n",
-            "  inflating: data/names/Vietnamese.txt  \n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -349,6 +312,46 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "FxObsFEpYqTY"
+      },
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "\n",
+        "class LSTM_name(nn.Module):\n",
+        "    def __init__(self, input_size, hidden_size, output_size):\n",
+        "        super(LSTM_name, self).__init__()\n",
+        "        self.hidden_size = hidden_size\n",
+        "        self.i2o = nn.Linear(n_categories + input_size, input_size)\n",
+        "        self.lstm = nn.LSTM(input_size=input_size, hidden_size=hidden_size, batch_first=True)\n",
+        "        self.o2o = nn.Linear(hidden_size,output_size)\n",
+        "        self.dropout = nn.Dropout(0.1)\n",
+        "        self.softmax = nn.LogSoftmax(dim=1)\n",
+        "\n",
+        "    def forward(self, category, input, hidden):\n",
+        "        input_combined = torch.cat((category.unsqueeze(1), input.unsqueeze(1)), -1)\n",
+        "        #hidden = self.i2h(input_combined)\n",
+        "        output = self.i2o(input_combined)\n",
+        "        #output_combined = torch.cat((hidden, output), 1)\n",
+        "        output, hidden = self.lstm(output, hidden)\n",
+        "        output = self.o2o(output.reshape(-1, self.hidden_size))\n",
+        "        output = self.dropout(output)\n",
+        "        output = self.softmax(output)\n",
+        "        return output, hidden\n",
+        "\n",
+        "    def initHidden(self, batch_size):\n",
+        "        ''' Initializes hidden state '''\n",
+        "        h0 = torch.zeros((1,batch_size,self.hidden_size)).to(device)\n",
+        "        c0 = torch.zeros((1,batch_size,self.hidden_size)).to(device)\n",
+        "        hidden = (h0,c0)\n",
+        "        return hidden"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "-BQK6SVW54i-"
       },
       "source": [
@@ -412,8 +415,8 @@
         "id": "gdX0tE2h6OeW"
       },
       "source": [
-        "rnn = RNN(n_letters, 128, n_letters).to(device)\n",
-        "optimizer = torch.optim.SGD(rnn.parameters(),lr=5e-4)\n",
+        "rnn = LSTM_name(n_letters, 128, n_letters).to(device)\n",
+        "optimizer = torch.optim.Adam(rnn.parameters(),lr=5e-4)\n",
         "\n",
         "n_iters = 100000\n",
         "print_every = 5000\n",
@@ -562,9 +565,10 @@
         "train_iter, test_iter = datasets.IMDB()\n",
         "max_vocab_size = 25000\n",
         "tokenizer = get_tokenizer('spacy')\n",
-        "for root, dir, files in os.walk('./'):\n",
+        "'''for root, dir, files in os.walk('./'):\n",
         "      if 'counter_imdb.py' in files:\n",
-        "         counter = torch.load(*files)\n",
+        "         counter = torch.load(*files)'''\n",
+        "counter = torch.load('./counter_imdb.py')\n",
         "if counter is None:\n",
         "  counter = Counter()\n",
         "  for (label, line) in train_iter:\n",
@@ -686,11 +690,13 @@
         "\n",
         "          if i % 10 == 9:    # print every 50 mini-batches\n",
         "              print('[%d, %5d] loss: %.3f' %\n",
-        "                    (epoch + 1, i + 1, running_loss / 50))\n",
+        "                    (epoch + 1, i + 1, running_loss / 10))\n",
+        "              train_loss.append(running_loss/10)\n",
         "              running_loss = 0.0\n",
-        "      train_loss.append(epoch_loss/(i+1))\n",
+        "      #train_loss.append(epoch_loss/(i+1))\n",
         "      #Evaluation of the trained model\n",
         "      epoch_loss = 0.0\n",
+        "      running_loss = 0.0\n",
         "      acc = 0.0\n",
         "      if val_dataloader:\n",
         "        print(\"validating...\")\n",
@@ -700,11 +706,16 @@
         "                predicted_label = model(text, val_h,text_lengths)\n",
         "                loss = criterion(predicted_label.squeeze(), label.float())\n",
         "                acc += binary_accuracy(predicted_label.squeeze(), label.float()).item()\n",
-        "                epoch_loss += loss.item()\n",
+        "                running_loss += loss.item()\n",
+        "                if i % 10 == 9:    # print every 50 mini-batches\n",
+        "                  print('[%d, %5d] loss: %.3f' %\n",
+        "                        (epoch + 1, i + 1, running_loss / 10))\n",
+        "                  val_loss.append(running_loss/10)\n",
+        "                  running_loss = 0.0\n",
         "        acc = acc/(i+1)\n",
         "        print('Accuracy of the network on the test reviews: %d %%' % (acc*100))\n",
         "        metric.append(acc)\n",
-        "        val_loss.append(epoch_loss/(i+1))\n",
+        "        #val_loss.append(epoch_loss/(i+1))\n",
         "  return train_loss, val_loss, metric"
       ],
       "execution_count": null,
@@ -957,7 +968,7 @@
       "source": [
         "max_vocab_size = 25000\n",
         "#tokenizer = get_tokenizer('spacy')\n",
-        "counter = torch.load('counter_yahoo.py')\n",
+        "counter = torch.load('./counter_yahoo.py')\n",
         "tokenizer = get_tokenizer('spacy')\n",
         "'''if counter is None:\n",
         "  counter = Counter()\n",
