--- a/2022/TP6/TP6_CNN_for_RANS_flow_around_airfoil.ipynb
+++ b/2022/TP6/TP6_CNN_for_RANS_flow_around_airfoil.ipynb
@@ -6,7 +6,7 @@
       "name": "TP6 - CNN for RANS flow around airfoil.ipynb",
       "provenance": [],
       "mount_file_id": "1CKRlROln_WOeET9tR_D74EZN3af65Bcm",
-      "authorship_tag": "ABX9TyMIPdx5hFXKIQH7ZIrIDuOA",
+      "authorship_tag": "ABX9TyPscMIRxzYsYknaJPNKBnrP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "o_V-0I9a5wS2"
       },
@@ -80,7 +80,7 @@
       "metadata": {
         "id": "cV7CgA7tMpqM"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,7 +102,7 @@
       "metadata": {
         "id": "1xamehn6I5B5"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +118,7 @@
         "id": "eJqRyzvLWc1F",
         "outputId": "fdf209bc-4dc4-47fd-ef20-3e8588c0cd93"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -159,12 +159,17 @@
         "\\begin{equation}\n",
         "  \\tilde{P} = P/|V_i|^2\n",
         "\\end{equation}\n",
+        "\n",
+        "  Where $|V_i| = \\sqrt{V_{ix}^2 + V_{iy}^2}$.\n",
         "*   Substract the mean of each pressure sample:\n",
         "\\begin{equation}\n",
         "  \\hat{P} = \\tilde{P} - \\tilde{P}_{mean}\n",
         "\\end{equation}\n",
+        "\n",
+        "  Where $\\tilde{P}_{mean} = \\frac{1}{N}\\sum_k^N{\\tilde{p}}$\n",
         "*   The last part is to normalize each variable in the [-1,1] range, we use the maximun value of each variable of the entire dataset to do the normalization.\n",
-        "\n"
+        "\n",
+        "*   In this problem we have an input tensor $X$ and an output tensor $Y$, the input tensor is $X = [V_{ix}, V_{iy}, mask]$ and the output tensor is $Y = [P, V_{ox}, V_{oy}]$."
       ],
       "metadata": {
         "id": "kAyaSuGneKS8"
